2014-06-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): When there are no syntaxes, for example
	with --ignorercfiles, do not try to find one, because that would lead
	to the magic database being searched, which slows down startup a lot.
	* src/color.c (color_update): Move some variables to a better place.

2014-06-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c: Fix compilation with --enable-tiny --enable-nanorc.
	* src/winio.c (parse_kbinput, get_escape_seq_kbinput): Make Ctrl-Left
	and Ctrl-Right produce special codes, and map these codes to Prevword
	and Nextword instead of reducing them to a plain Left and Right.  The
	codes 539 and 554 were so chosen because some terminals produce these.

2014-06-29  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_undo): Update the pointer to the bottom of the file
	when undoing line deletions at file's end.

2014-06-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/prompt.c (do_statusbar_input): Remove the useless parameters
	'have_shortcut and 'allow_funcs'; the latter is only ever TRUE.
	* src/global.c (shortcut_init), src/prompt.c (do_statusbar_input):
	Eradicate the execute flag -- it is only FALSE for functions that are
	empty placeholders (so executing them will not do anything anyway) or
	for functions ('total_refresh', 'do_suspend_void') that do not exist
	in menus with a prompt.  The only two exceptions are 'do_cancel' and
	'do_gotolinecolumn_void'.  The first is handled specially, so do that
	too for the second and then get to drop 140 parameters.
	* src/global.c (strtosc): Move recognition of the toggles to the end,
	use a single assignment of do_toggle_void, trim the unneeded braces.

2014-06-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Add default keybindings for Cut,
	PrevWord and NextWord in the prompt input lines; the code for those
	special operations already exists, just the shortcuts were missing.